--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <form class="search-form" id="search-form">
+      <form class="form" id="form">
         <input
           type="text"
           name="searchQuery"
@@ -18,7 +18,7 @@
         <button type="submit">Search</button>
       </form>
 
-      <div class="gallery" id="gallery"></div>
+      <up class="gallery" id="gallery"></ul>
 
       <div class="loader-container">
         <span class="loader is-hidden" id="loader"></span>
