--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <button type="submit">Search</button>
       </form>
 
-      <up class="gallery"></ul>
+      <ul class="gallery"></ul>
 
       <div class="loader-container">
         <span class="loader is-hidden" id="loader"></span>
